# codiculum

./: .gitignore  LICENSE  README.md  TASKS.md  app.py  extract_classes.py  main.py  pyproject.toml  test_parser.py
.cursor/rules/: project-managment.mdc  project-rules.mdc  testing.mdc
docs/: ChunkingStrategy.md
setup/: Doxyfile  schema_dump.sql
src/codiculum/chunker/: __init__.py  code_chunker.py  models.py  source_retriever.py
src/codiculum/doxygen_parser/: __init__.py  doxygen_parser.py  models.py  parser.py
tests/chunker/: sample_code.cpp  test_code_chunker.py  test_code_chunker_integration.py  test_source_retrieval.py
tests/doxygen_parser/: test_parser.py
tests/doxygen_parser/test_data/: sample_doxygen.xml
