[project]
name = "codiculum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.7",
    "llama-index>=0.12.33",
    "lxml>=5.4.0",
    "openai>=1.76.0",
    "streamlit>=1.44.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
